apps/overseerr/ingress-overseerr-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: overseerr
      port:
        number: 5055
  tls:
    - hosts:
        - overseerr
